[gd_scene load_steps=9 format=3 uid="uid://dpj88jlo2ja54"]

[ext_resource type="Texture2D" uid="uid://bb7w0csp8285p" path="res://assets/textures/bg.png" id="1_0ss3p"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_pdg7a"]
[ext_resource type="PackedScene" uid="uid://bxfv2hgioajn5" path="res://scenes/player.tscn" id="2_lry5f"]
[ext_resource type="PackedScene" uid="uid://ch2jsvm7xuu83" path="res://scenes/enemy_spawner.tscn" id="3_oow4r"]
[ext_resource type="PackedScene" uid="uid://dnuwnh7i0oppn" path="res://scenes/hud.tscn" id="5_v1uvt"]
[ext_resource type="AudioStream" uid="uid://b0h4bgctgjeuq" path="res://assets/audio/hit.wav" id="6_bmdtv"]
[ext_resource type="AudioStream" uid="uid://biqet8axnqren" path="res://assets/audio/explode.wav" id="7_wmx8i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ltdc"]
size = Vector2(29.1849, 45.3095)

[node name="Game" type="Node2D"]
script = ExtResource("1_pdg7a")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1288.0
offset_bottom = 724.0
texture = ExtResource("1_0ss3p")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_lry5f")]
position = Vector2(54, 363)

[node name="EnemySpawner" parent="." instance=ExtResource("3_oow4r")]

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2(-235, 162)
scale = Vector2(1, 11.28)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(-3.83005, 18.0468)
rotation = -3.14159
scale = Vector2(0.833989, -1.42609)
shape = SubResource("RectangleShape2D_0ltdc")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("5_v1uvt")]

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bmdtv")

[node name="PlayerTakeDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wmx8i")

[node name="TimeKeeper" type="Timer" parent="."]
autostart = true

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_death_zone_area_entered"]
[connection signal="timeout" from="TimeKeeper" to="." method="_on_time_keeper_timeout"]
